# Aqi_G

./: .gitignore  CLAUDE.md  LICENSE  README.md  project.md  pyproject.toml  requirements.txt
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
reports/: GRADUATION_REPORT.md  _current_run.txt  report_notes.json
scripts/: 01_download.py  02_build_features.py  03_train_models.py  04_evaluate.py  05_forecast.py  06_run_ablations.py
specs/001-aqi-forecast-beijing/: spec.md
specs/001-aqi-forecast-beijing/checklists/: requirements.md
src/aqi/: __init__.py  config.py
src/aqi/aqi/: breakpoints.py  compute.py
src/aqi/data/: clean.py  download.py  impute.py  load.py
src/aqi/evaluate/: baselines.py  metrics.py  report.py  runner.py
src/aqi/features/: build.py  calendar.py  spatial.py  temporal.py  weather.py
src/aqi/forecast/: pipeline.py
src/aqi/models/: base.py  ensemble.py  lgbm.py  lstm.py  rf.py  xgb.py
src/aqi/persistence/: registry.py
src/aqi/splits/: walk_forward.py
tests/: _synthetic.py  test_aqi.py  test_features.py  test_forecast_pipeline.py  test_metrics.py  test_splits.py
