[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aqi"
version = "0.1.0"
description = "Beijing AQI 24-hour forecasting system (RF / XGB / LightGBM / LSTM)"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Reda Hamada" }]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "requests>=2.31",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "joblib>=1.3",
    "torch>=2.2",
    "matplotlib>=3.8",
    "chinese-calendar>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:google.*",
    "ignore::FutureWarning:sklearn.*",
]

[tool.ruff]
line-length = 100
target-version = "py310"
